--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -1,17 +1,31 @@
-serenity {
-    take.screenshots = FOR_FAILURES
+environments {
+  default {
+    webdriver.base.url = "https://www.saucedemo.com"
+  }
 }
 
-headless.mode = true
+headless.mode = false
+
+serenity {
+  take.screenshots = FOR_EACH_ACTION
+  logging = VERBOSE
+  timeout = 10000
+}
+
 webdriver {
+  wait.for.timeout = 10000
   driver = chrome
   capabilities {
     browserName = "chrome"
-    acceptInsecureCerts = true
     "goog:chromeOptions" {
-      args = ["remote-allow-origins=*","test-type", "no-sandbox", "ignore-certificate-errors", "--window-size=1000,800",
-        "incognito", "disable-infobars", "disable-gpu", "disable-default-apps", "disable-popup-blocking",
-        "disable-dev-shm-usage", "disable-extensions", "disable-web-security", "disable-translate", "disable-logging"]
+      args = ["--start-maximized",
+              "--remote-allow-origins=*",
+              "--disable-extensions",
+              "--no-sandbox",
+              "--disable-gpu",
+              "--disable-notifications"
+            ]
+
     }
   }
 }
