--- a/serenity.properties
+++ b/serenity.properties
@@ -1,1 +1,4 @@
-serenity.project.name=Serenity and Cucumber Quick Start
+serenity.project.name = "Saucedemo E2E Tests"
+serenity.retries=1
+serenity.take.screenshots = FOR_EACH_ACTION
+serenity.outputDirectory = target/site/serenity
