--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ dependencies {
         implementation "ch.qos.logback:logback-classic:${logback_classic_version}"
         testImplementation "org.assertj:assertj-core:${assertj_core_version}"
         implementation 'io.github.bonigarcia:webdrivermanager:5.8.0'
+        testImplementation 'org.seleniumhq.selenium:selenium-firefox-driver:4.19.1'
     }
 }
 
